.provarCaches/00D4P000000xR5ZUAU/objects/Flosum__Pipeline__c.object
<CustomObject>
    <fields>
        <fullName>Flosum__Build_and_Deploy_Organizations__c</fullName>
        <label>Build and Deploy Organizations</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flosum__Deployment_Mode__c</fullName>
        <label>CI Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEPLOY</fullName>
                    <default>true</default>
                    <label>DEPLOY</label>
                </value>
                <value>
                    <fullName>VALIDATE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Deployment_Style__c</fullName>
        <label>CI Deployment Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>STOP ON FAILURE</fullName>
                    <default>true</default>
                    <label>STOP ON FAILURE</label>
                </value>
                <value>
                    <fullName>CONTINUE ON FAILURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Filter__c</fullName>
        <label>Filter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commit Only</fullName>
                    <default>true</default>
                    <label>Commit Only</label>
                </value>
                <value>
                    <fullName>All Components</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Flosum__Run_Tests_on_Deployment__c</fullName>
        <label>Run Tests on Deployment</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flosum__Specified_Tests__c</fullName>
        <label>Specified Tests</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Pipeline</label>
    <nameField>
        <label>Pipeline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>